add spring security defaults for cors